# PerceptionAI

./: .gitignore  CMakeLists.txt  LICENSE  Perception.cpp  Perception.h  Plan Of Attack  README.md  library.h  main.cpp
Biases/: Bias.cpp  Bias.h
Layers/: Layer.cpp  Layer.h
Network/Layers/: Layer.cpp
Network/Nodes/: Node.h
Network/Weights/: Weight.h
Network_Elements/Biases/: Bias.cpp  Bias.h
Network_Elements/Layers/: Layer.cpp  Layer.h
Network_Elements/Nodes/: Node.cpp  Node.h
Network_Elements/Perception_Elements/: Perception_Element.cpp  Perception_Element.h
Network_Elements/Perception_Elements/Individual/: Perception_Element.cpp  Perception_Element.h
Network_Elements/Perception_Elements/Matrices/: Perception_Element_Matrix.cpp  Perception_Element_Matrix.h
Network_Elements/Perception_Elements/Vectors/: Perception_Element_Vector.cpp  Perception_Element_Vector.h
Network_Elements/Statuses/: Status.cpp  Status.h
Network_Elements/Weights/: Weight.cpp
Nodes/: Node.cpp  Node.h
PerceptionAI/Network_Elements/Biases/: Bias.h
PerceptionAI/Network_Elements/Layers/: Layer.cpp  Layer.h
PerceptionAI/Network_Elements/Nodes/: Node.cpp  Node.h
PerceptionAI/Network_Elements/Perception_Elements/Individual/: Perception_Element.cpp  Perception_Element.h
PerceptionAI/Network_Elements/Perception_Elements/Matrices/: Perception_Element_Matrix.cpp  Perception_Element_Matrix.h
PerceptionAI/Network_Elements/Perception_Elements/Vectors/: Perception_Element_Vector.h
PerceptionAI/Network_Elements/Results/: Result.cpp  Result.h  Results.cpp  Results.h
PerceptionAI/Network_Elements/Statuses/: Status.cpp  Status.h
PerceptionAI/Network_Elements/Weights/: Weight.cpp  Weight.h
PerceptionAI/Perception_Network/: Perception_Network.cpp
PerceptionAI/Utilities/Enumerations/: Perception_Enumerations.h
PerceptionAI/Utilities/GUID/: GUID.h
PerceptionAI/Utilities/Layer_Helper/: Layer_Helper.cpp  Layer_Helper.h
PerceptionAI/Utilities/Maths/: Perception_Maths.cpp  Perception_Maths.h
PerceptionAI_Tests/: CMakeLists.txt
PerceptionAI_Tests/Tests/: CMakeLists.txt  Layer_Helper_Test.cpp  Perception_Maths_Test.cpp  Results_Test.cpp
Perception_Elements/: Perception_Element.cpp  Perception_Element.h
Perception_Network/: Perception_Network.cpp  Perception_Network.h
Utilities/Enumerations/: Perception_Enumerations.h
Utilities/Layer_Helper/: Layer_Helper.cpp  Layer_Helper.h
Utilities/Maths/: Perception_Maths.cpp  Perception_Maths.h
Weights/: Weight.cpp  Weight.h
